Fixing scrollbar

--- a/style.css
+++ b/style.css
@@ -18,13 +18,13 @@ body::-webkit-scrollbar {
   }
   
   body::-webkit-scrollbar-track {
-    background: transparent;        /* color of the tracking area */
+    background: rgb(238, 238, 236);        /* color of the tracking area */
   }
   
   body::-webkit-scrollbar-thumb {
     background-color: rgb(172, 137, 99);    /* color of the scroll thumb */
     border-radius: 20px;       /* roundness of the scroll thumb */
-    border: 3px solid rgb(238, 238, 236);;  /* creates padding around scroll thumb */
+    border: 3px solid rgb(238, 238, 236);  /* creates padding around scroll thumb */
   }
 
 .all {
